c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_semantics/extra_credit/undeclared_variable_in_default.c
// test that we perform usual variable resolution/validation within default
// statements
int main(void) {
    int a = 10;
    switch (a) {
        case 1:
            break;

        default:
            return b;
            break;
    }
    return 0;
}